cluster/apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    keel.sh/policy: minor
    keel.sh/approvals: "1"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: '@every 1h'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-data
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.10.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - name: uptime-kuma-data
            mountPath: /app/data
