cluster/apps/uptime-kuma/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: NodePort
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
      name: web
