cluster/apps/uptime-kuma/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptime-kuma
    namespace: uptime-kuma
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: uptime-kuma
        app.kubernetes.io/name: uptime-kuma
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:Z3TuSOloQgg2wC8gls+TR4isNU3rV9e/1tdPWL3PsnYwZQ==,iv:ktVFp0ID9c/C0q6Zv+Cv+btQuCZSu688EHJmbm38Gc8=,tag:4JvWuN3M2iz80n6IXzWvLQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: uptime-kuma
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:QuglJoLmaz6qXvBAHwFByxmP2+vrYxwFJcXh+zvxiUYJ1g==,iv:Ayfqz0N03gHVmhyyU2Tx03ksoLxh5F5y+SBMnjASrHY=,tag:gco3+nz4ydn1mP9zEQD+GQ==,type:str]
          secretName: uptime-kuma-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-31T14:43:47Z"
    mac: ENC[AES256_GCM,data:R9HFed3AqVPZ6ipN8OCDGRArYb+7CqXZf04XEWOcmXcwrFtbiu03vtF+1WzljJFOysYZd03VRzcnL4MNY6mdMj1uvQWSNn6kA8AkNmqISWXedOkCImdGl0V88+5bapkMkjURz88Lh0TQgE0Yl3LJxMmkNIn3hQzA4EiOjVi7yQ8=,iv:V/hHn/f02trvled6/r0QkHQJm++eF8UZ9LkSQC0qGlE=,tag:NGw4kLqSaj+ItYYBhXQ5Bg==,type:str]
    pgp:
        - created_at: "2021-10-31T14:43:47Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkARAAz8MaCMP1vOWAFaWvXZhVRmNV7pxG1dh9YnEvsgAnD31E
[...]
            =BhwA
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image)$
    version: 3.7.1
